--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack && mv example/vue-recyclist* dist/"
+    "build": "cross-env NODE_ENV=production webpack && mv example/vue-recyclist* dist/",
+    "lint": "eslint ./src/**/*.{js,vue}"
   },
   "keywords": [
     "vue",
@@ -28,11 +29,15 @@
   "homepage": "https://github.com/xtongs/vue-recyclist",
   "license": "MIT",
   "devDependencies": {
+    "@vue/cli-service": "^4.4.6",
+    "@vue/eslint-config-airbnb": "^5.1.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "eslint": "^7.5.0",
+    "eslint-plugin-vue": "^7.0.0-beta.0",
     "file-loader": "^0.9.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
