--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-recyclist",
   "description": "Infinite scroll plugin for Vue.js with DOM recycling.",
-  "version": "1.0.12",
+  "version": "1.1.0",
   "main": "dist/vue-recyclist.min.js",
   "author": "Tong <xtongs@gmail.com>",
   "files": [
@@ -10,7 +10,9 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
     "build": "cross-env NODE_ENV=production webpack && mv example/vue-recyclist* dist/",
-    "lint": "eslint ./src/**/*.{js,vue}"
+    "lint": "eslint ./{src,stories}/**/*.{js,vue}",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "keywords": [
     "vue",
@@ -21,29 +23,38 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/xtongs/vue-recyclist.git"
+    "url": "git+https://github.com/mr-africa/vue-recyclist.git"
   },
   "bugs": {
-    "url": "https://github.com/xtongs/vue-recyclist/issues"
+    "url": "https://github.com/mr-africa/vue-recyclist/issues"
   },
-  "homepage": "https://github.com/xtongs/vue-recyclist",
+  "homepage": "https://github.com/mr-africa/vue-recyclist",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.11.0",
+    "@babel/preset-env": "^7.10.4",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/vue": "^5.3.19",
     "@vue/cli-service": "^4.4.6",
     "@vue/eslint-config-airbnb": "^5.1.0",
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
+    "babel-loader": "^8.1.0",
+    "babel-preset-vue": "^2.0.2",
     "cross-env": "^3.0.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^4.1.1",
     "eslint": "^7.5.0",
     "eslint-plugin-vue": "^7.0.0-beta.0",
     "file-loader": "^0.9.0",
     "url-loader": "^0.5.8",
-    "vue": "^2.1.0",
-    "vue-loader": "^10.0.0",
-    "vue-template-compiler": "^2.1.0",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+    "vue-style-loader": "^4.1.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.11"
   }
 }
