--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "vue-recyclist",
   "description": "Infinite scroll plugin for Vue.js with DOM recycling.",
   "version": "1.1.0",
-  "main": "dist/vue-recyclist.min.js",
+  "main": "dist/vue-recyclist.common.js",
   "author": "Tong <xtongs@gmail.com>",
   "files": [
     "dist"
   ],
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack && mv example/vue-recyclist* dist/",
     "lint": "eslint ./{src,stories}/**/*.{js,vue}",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build": "./node_modules/.bin/vue-cli-service build --target lib --name vue-recyclist src/index.js"
   },
   "keywords": [
     "vue",
@@ -37,20 +36,13 @@
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/vue": "^5.3.19",
+    "@vue/cli": "^4.4.6",
     "@vue/cli-service": "^4.4.6",
     "@vue/eslint-config-airbnb": "^5.1.0",
     "babel-loader": "^8.1.0",
     "babel-preset-vue": "^2.0.2",
-    "cross-env": "^3.0.0",
-    "css-loader": "^4.1.1",
     "eslint": "^7.5.0",
-    "eslint-plugin-vue": "^7.0.0-beta.0",
-    "file-loader": "^0.9.0",
-    "url-loader": "^0.5.8",
-    "vue-style-loader": "^4.1.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "eslint-plugin-vue": "^7.0.0-beta.0"
   },
   "dependencies": {
     "vue": "^2.6.11",
