--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,8 @@ jobs:
       run: yarn
     - name: Run ESLint
       run: yarn lint
+    - name: build
+      run: yarn build
+    - name: build storybook
+      run: yarn build-storybook
+
