--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-recyclist",
   "description": "Infinite scroll plugin for Vue.js with DOM recycling.",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "dist/vue-recyclist.common.js",
   "author": "Tong <xtongs@gmail.com>",
   "files": [
@@ -33,6 +33,7 @@
     "@babel/core": "^7.11.0",
     "@babel/preset-env": "^7.10.4",
     "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/vue": "^5.3.19",
